--- a/view/reg.html
+++ b/view/reg.html
@@ -13,9 +13,6 @@
               <span class="reg-smartbanner-title">Регистрация</span>
               <span class="reg-smarbanner-total-users"></span>
           </div>
-          <div class="reg-smartbanner-options">
-            <button class="reg-smartbanner-options-restore button-regular">Восстановить список</button>
-          </div>
           <div class="reg-smartbanner-readers">
             <div class="reg-smartbanner-reader reg-smartbanner-portablereader">
               <span class="reg-smartbanner-reader-title">Portable reader:</span>
@@ -42,7 +39,13 @@
           </div>
 
           <aside class="reg-options">
-            <!-- // -->
+            <div class="reg-options-restore">
+              <button class="reg-options-restore-button button-regular">Восстановить</button>
+              <label class="reg-options-restore-label">
+                Сохранять пользователей
+                <input type="checkbox" checked>
+              </label>
+            </div>
           </aside>
         </div>
       </main>
