--- a/static/css/common.css
+++ b/static/css/common.css
@@ -24,8 +24,9 @@ body {
     box-shadow: inset 0 -2px 0 #206eb3;
     color: #fff;
     font-size: 18px;
-    text-shadow: 0 4px 3px rgba(32,110,179,0.2);
-    display: block;
+    text-shadow: 0 4px 3px rgba(32, 110, 179, .2);
+    display: flex;
+    justify-content: center;
     font-weight: 600;
     padding: 0px 32px;
     border: 0;
