--- a/view/reg.html
+++ b/view/reg.html
@@ -34,7 +34,7 @@
             </div>
     
             <div class="reg-controls">
-              <button class="reg-submit-registration button-regular">Закончить регистрацию</button>
+              <button class="reg-submit-registration button-regular" disabled>Закончить регистрацию</button>
             </div>
           </div>
 
