--- a/view/race.html
+++ b/view/race.html
@@ -45,7 +45,8 @@
       
       </div>
       <div class="race-controls">
-        <button class="race-controls-start button-regular">Старт!</button>
+        <button class="race-controls-start button-regular">Старт</button>
+        <button class="race-controls-over button-regular">Закончить</button>
       </div>
     </body>
     <script src="../static/scripts/race/race.js"></script>
