--- a/view/reg.html
+++ b/view/reg.html
@@ -39,12 +39,21 @@
           </div>
 
           <aside class="reg-options">
+            <div class="reg-options-title">Пользователи</div>
             <div class="reg-options-restore">
               <button class="reg-options-restore-button button-regular">Восстановить</button>
               <label class="reg-options-restore-label">
                 Сохранять пользователей
                 <input type="checkbox" checked>
               </label>
+            </div>
+            <div class="reg-options-title">Время</div>
+            <div class="reg-options-race">
+              <div class="reg-options-racetime">
+                <div class="reg-options-race-title">Время гонки</div>
+                <input class="reg-options-racetime-input input-regular" type="number" value="15">
+              </div>
+
             </div>
           </aside>
         </div>
