--- a/src/styles/users.css
+++ b/src/styles/users.css
@@ -1,3 +1,19 @@
 .users {
-    width: 50%;
+    width: 100%;
+}
+
+.users > table {
+    text-align: left;
+}
+
+.users-row-name {
+    min-width: 256px;
+}
+
+.users-row-best-time {
+    text-align: center;
+}
+
+.users-row-best-count {
+    text-align: center;
 }
