--- a/src/styles/smartbanner.css
+++ b/src/styles/smartbanner.css
@@ -1,7 +1,7 @@
 .smartbanner {
     min-width: 900px;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
 }
 
 .smartbanner-mainreader-button, .smarbanner-portablereader-button {
