--- a/src/styles/users.css
+++ b/src/styles/users.css
@@ -14,6 +14,12 @@
 
 .users-row-name {
     min-width: 150px;
+    cursor: pointer;
+}
+
+.users-row-name:hover {
+    font-weight: 600;
+    text-decoration: underline;
 }
 
 .title-users-row-best-count, .title-users-row-best-time {
