--- a/src/view/index.html
+++ b/src/view/index.html
@@ -1,29 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
+    <head>
+        <meta charset='UTF-8'>
+        <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+        <meta http-equiv='X-UA-Compatible' content='ie=edge'>
+        <title>RTS</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>React Boilerplate</title>
-</head>
-
-<body>
-<div id="root">
-
-</div>
-    <script>
-      const { ipcRenderer } = require('electron');
-      window.ipc = {
-        send(type, data) {
-          ipcRenderer.send(type, data);
-        },
-        on(type, listener) {
-          ipcRenderer.on(type, listener)
-        }
-      };
-    </script>
-    <script src="bundle.js"></script>
-</body>
-
+    <body>
+        <div id='root'></div>
+        <script src='bundle.js'></script>
+    </body>
 </html>
