--- a/src/client/components/readers-control/reader-settings/reader-settings.scss
+++ b/src/client/components/readers-control/reader-settings/reader-settings.scss
@@ -1,5 +1,6 @@
-.reader-settings-switch-label {
-    margin-right: 16px;
+.reader-settings-drawer-content {
+    padding-left: 16px;
+    padding-top: 16px;
 }
 
 .reader-settings-select-wrapper {
