--- a/src/client/components/readers-control/reader-settings/reader-settings.scss
+++ b/src/client/components/readers-control/reader-settings/reader-settings.scss
@@ -1,6 +1,5 @@
 .reader-settings-drawer-content {
-    padding-left: 16px;
-    padding-top: 16px;
+    padding: 16px;
 }
 
 .reader-settings-select-wrapper {
@@ -14,4 +13,15 @@
 .reader-settings-scantime-label {
     font-weight: 600;
     margin-left: 4px;
+}
+
+.reader-params-input-group {
+    display: flex;
+    margin-top: 16px;
+}
+
+.reader-params-input-group-label {
+    display: flex;
+    align-items: center;
+    width: 64px;
 }
