--- a/src/client/components/control-panel/settings/reader-settings/reader-settings.scss
+++ b/src/client/components/control-panel/settings/reader-settings/reader-settings.scss
@@ -17,7 +17,7 @@
 
 .reader-params-input-group {
     display: flex;
-    margin-top: 16px;
+    margin: 16px 0;
 }
 
 .reader-params-input-group-label {
