--- a/src/client/components/control-panel/control-panel.scss
+++ b/src/client/components/control-panel/control-panel.scss
@@ -34,6 +34,7 @@
     position: relative;
 }
 
+.readers-show-results,
 .readers-main-settings {
     cursor: pointer;
     opacity: .5;
@@ -44,4 +45,8 @@
     &:hover {
         opacity: 1;
     }
+}
+
+.readers-show-results {
+    top: 25px;
 }
